[package]
name = "schema"
version = "0.1.0"
edition = "2021"
author=["huang12zheng<805104533@qq.com>"]
publish = true
license = "MIT"
repository="https://github.com/huang12zheng/schemaorg"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = {version="1",features = ["derive"]}
